delete nacbar and update dropdown

--- a/src/web/css/style.css
+++ b/src/web/css/style.css
@@ -1,195 +1,340 @@
 /* root */
 :root {
-    --sidebar-left-size: 18.75rem;
-    --navbar-height: 4.5rem;
-    --sidebar-left-size-collapse: 4rem;
-    --sidebar-left-size-overlay: 0;
-    --sidebar-link-height: 2.5rem;
-  }
+  --sidebar-left-size: 18.75rem;
+  --navbar-height: 4.5rem;
+  --sidebar-left-size-collapse: 4rem;
+  --sidebar-left-size-overlay: 0;
+  --sidebar-link-height: 2.5rem;
+}
+
+/* reset */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/* font  */
+@font-face {
+  font-family: "Inter";
+  src: url("./Font/Inter/Inter-Italic-VariableFont_opsz\,wght.ttf") format("truetype");
+  font-weight: 100 900; /* variable từ 100 → 900 */
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Inter";
+  src: url("./Font/Inter/Inter-VariableFont_opsz\,wght.ttf") format("truetype");
+  font-weight: 100 900;
+  font-style: normal;
+}
+
+html {
+  height: 1vh;
+  width: 1vw;
+}
+
+body {
+  font-family: "Inter", sans-serif;
+}
+
+/* Mặc định light mode */
+body {
+  background-color: #ffffff;
+  color: #212529;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+/* Dark mode */
+body.dark-mode {
+  background-color: #121212;
+  color: #f1f1f1;
+}
+
+/* Navbar */
+body.dark-mode #navBar {
+  background-color: #1f1f1f !important;
+  color: #f1f1f1;
+}
+
+/* Sidebar */
+body.dark-mode #appAside {
+  background-color: #1a1a1a !important;
+  color: #f1f1f1;
+}
+
+/* Link */
+body.dark-mode .app_aside-link--size {
+  color: #f1f1f1;
+}
+
+body.dark-mode .app_aside-link--size:hover {
+  color: #f1f1f1;
+}
+
+/* Card hoặc container */
+body.dark-mode .card,
+body.dark-mode #mySidebar {
+  background-color: #1e1e1e !important;
+  color: #f1f1f1;
+}
+
+/* Form input */
+body.dark-mode button{
+  background-color: #2a2a2a !important;
+  color: #f1f1f1 !important;
+}
+body.dark-mode button:hover{
+  background-color:#f1f1f1 !important ;
+  color: #2a2a2a !important;
   
-  /* reset */
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  /* font  */
-  @font-face {
-    font-family: "Inter";
-    src: url("./Font/Inter/Inter-Italic-VariableFont_opsz\,wght.ttf")
-      format("truetype");
-    font-weight: 100 900; /* variable từ 100 → 900 */
-    font-style: italic;
-  }
-  
-  @font-face {
-    font-family: "Inter";
-    src: url("./Font/Inter/Inter-VariableFont_opsz\,wght.ttf") format("truetype");
-    font-weight: 100 900;
-    font-style: normal;
-  }
-  
-  html {
-    height: 1vh;
-    width: 1vw;
-  }
-  
-  body {
-    font-family: "Inter", sans-serif;
-    background-color: #e1e1e8a8;
-  }
-  
-  /* navbar */
-  #navBar {
-    height: var(--navbar-height);
-  }
-  
-  .app_header {
-    background-color: #50507c3b;
-    transition: all 0.5s ease;
-  }
-  #navBar {
-    padding-left: var(--sidebar-left-size) !important;
-  }
-  #navBar.action-collapse {
-    padding-left: var(--sidebar-left-size-collapse) !important;
-  }
-  #navBar.action-overlay {
-    padding-left: var(--sidebar-left-size-overlay) !important;
-  }
-  .app_header--blur {
-    backdrop-filter: blur(10px);
-  }
-  
-  .search {
-    position: relative;
-    width: 21.875rem;
-  }
-  
-  .search #iconSearch {
-    position: absolute;
-    top: 50%;
-    left: 15px;
-    transform: translateY(-50%);
-  }
-  .profile span {
-    font-size: 0.9rem;
-  }
-  .avatar {
-    width: 3rem;
-    height: 3rem;
-    overflow: hidden;
-    border: none !important;
-  }
-  .avatar img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+}
+
+body.dark-mode input,
+body.dark-mode select,
+body.dark-mode textarea {
+  background-color: #2a2a2a;
+  color: #f1f1f1;
+  border: 1px solid #444;
+}
+
+body.dark-mode input::placeholder,
+body.dark-mode textarea::placeholder {
+  color: #bbb;
+}
+
+/* navbar */
+#navBar {
+  height: var(--navbar-height);
+  background-color: #ebebeb64;
+}
+
+.app_header {
+  transition: all 0.5s ease;
+}
+#navBar {
+  padding-left: var(--sidebar-left-size) !important ;
+}
+#navBar.action-collapse {
+  padding-left: var(--sidebar-left-size-collapse) !important ;
+}
+#navBar.action-overlay {
+  padding-left: var(--sidebar-left-size-overlay) !important;
+}
+.app_header--blur {
+  backdrop-filter: blur(10px);
+}
+
+.search {
+  position: relative;
+  width: 21.875rem;
+}
+
+.search #iconSearch {
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+}
+.profile
+{
+    cursor: pointer;
+}
+.profile span {
+  font-size: 0.9rem;
+
+}
+.avatar {
+  width: 2.8rem;
+  height: 2.8rem;
+  overflow: hidden;
+  border: none !important;
+}
+.avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
   
   .app_header button {
     width: 3rem;
     height: 3rem;
   }
-  
-  .setting {
-    position: relative;
-  }
-  .listSetting {
-    position: absolute;
-    top: 70px;
-    right: 24px;
-    z-index: 10;
-    width: 150px;
-  
-  }
-  .listSetting::before {
-    content: "";
-    position: absolute;
-    top: -10px; 
-    right: 15px;
-    border-width: 0 8px 10px 8px;
-    border-style: solid;
-    border-color: transparent transparent white transparent;
-    filter: drop-shadow(0 -1px 1px rgba(0,0,0,0.1)); 
-    
-  }
-  .groupMultiLang {
-    position: relative;
-    user-select: none
-  }
-  .multi-lang {
-    position: relative;
-    display: inline-block;
-    cursor: pointer;
-    user-select: none
-  }
-  .box-multi {
-    position: absolute;
-    top: 40px; /* khoảng cách xuống dưới */
-    left: 0;
-    z-index: 10;
-    width: 180px;
-    user-select: none
-  }
-  .box-multi::before {
-    content: "";
-    position: absolute;
-    top: -10px;  /* đẩy lên trên */
-    left: 20px;  /* chỉnh vị trí theo icon/global */
-    border-width: 0 8px 10px 8px;
-    border-style: solid;
-    border-color: transparent transparent white transparent;
-    filter: drop-shadow(0 -1px 1px rgba(0,0,0,0.1));
-  }
-  .list_hover>li
-  {
-    cursor: pointer;
-    transition: all 0.2s ease;
-  }
-  .list_hover>li:hover
-  {
-    background-color: #6366f1; 
-    border-radius: 7px;
-    color: #fff;
-  
-  }
-  /* sidebar */
+
+.setting {
+  position: relative;
+}
+.listSetting {
+  position: absolute;
+  top: 70px;
+  right: 24px;
+  z-index: 10;
+  width: 150px;
+}
+.listSetting::before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  right: 15px;
+  border-width: 0 8px 10px 8px;
+  border-style: solid;
+  border-color: transparent transparent white transparent;
+  filter: drop-shadow(0 -1px 1px rgba(0, 0, 0, 0.1));
+}
+.groupMultiLang {
+  position: relative;
+  user-select: none;
+}
+.multi-lang {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  user-select: none;
+}
+.box-multi {
+  position: absolute;
+  top: 40px; /* khoảng cách xuống dưới */
+  left: 0;
+  z-index: 10;
+  width: 180px;
+  user-select: none;
+}
+.box-multi::before {
+  content: "";
+  position: absolute;
+  top: -10px; /* đẩy lên trên */
+  left: 20px; /* chỉnh vị trí theo icon/global */
+  border-width: 0 8px 10px 8px;
+  border-style: solid;
+  border-color: transparent transparent white transparent;
+  filter: drop-shadow(0 -1px 1px rgba(0, 0, 0, 0.1));
+}
+.list_hover > li {
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+.list_hover > li:hover {
+  background-color: #6366f1;
+  border-radius: 7px;
+  color: #fff;
+}
+/* sidebar */
+.app_aside-left--size {
+  width: var(--sidebar-left-size);
+  transition: all 0.5s ease;
+  transform: translateX(0%);
+}
+.app_aside-left--size.action-collapse {
+  width: var(--sidebar-left-size-collapse);
+}
+.app_aside-left--size.action-overlay {
+  transform: translateX(-100%);
+}
+.app_aside-link--size {
+  height: var(--sidebar-link-height);
+}
+/* Chữ hiển thị bình thường */
+.app_aside-hide {
+  transform: translate(0);
+  transition: all 0.5s ease; /* Hiệu ứng mượt */
+}
+
+/* Khi sidebar collapse / active */
+.app_aside-hide.active {
+  transform: translate(300%);
+  transition: all 0.5s ease; /* Thu chữ lại */
+}
+
+.app_aside-link--animation:hover {
+  background-color: #c1c1c187;
+}
+.app_aside-link--animation.active:hover {
+  background-color: #6366f1;
+  color: #fff;
+}
+.app_aside-link--animation.active {
+  background-color: #6366f1;
+  color: #fff;
+}
+/* Mặc định icon hướng sang phải */
+.btn[aria-expanded="false"] .bi-chevron-right {
+  transform: rotate(0deg);
+  transition: transform 0.5s ease;
+}
+
+/* Khi mở menu thì xoay 90 độ xuống */
+.btn[aria-expanded="true"] .bi-chevron-right {
+  transform: rotate(90deg);
+    transition: transform 0.5s ease;
+}
+.btn[aria-expanded="true"] {
+  background-color: #c1c1c187;
+}
+.custom-offcanvas {
+  width: 350px !important;  /* hoặc 400px / 60% tùy bạn */
+  border-radius: 12px 0 0 12px;
+}
+.setting-item {
+  padding: 10px 5px;
+  border-bottom: 1px solid #f1f1f1;
+}
+
+.setting-item:last-child {
+  border-bottom: none;
+}
+/* Mobile: từ 300px → 767.98px */
+@media (min-width: 300px) and (max-width:786.89px){
+  /* Sidebar ẩn mặc định */
   .app_aside-left--size {
-    width: var(--sidebar-left-size);
-    transition: all 0.5s ease;
-    transform: translateX(0%);
+    transform: translateX(0);
+    width: var(--sidebar-left-size-overlay);
   }
+
+  /* NavBar không cần chừa chỗ cho sidebar */
+  #navBar {
+    padding-left: 0rem !important;
+  }
+
+  /* Search ẩn trên mobile */
+  .multi-lang {
+    display: none;
+  }
+
+  .profile span
+  {
+    font-size: 12px;
+  }
+  .multi-lang
+  {
+    font-size: 12px;
+  }
+  .app_aside-left--size {
+        display: block;
+        width:105%  !important;
+        transform: translateX(-1rem);
+        padding-bottom: 2.5rem !important;
+        margin-top: 4.5rem !important;
+        padding-right: 0.5rem !important;
+        padding-left: 2rem !important;
+}
   .app_aside-left--size.action-collapse {
-    width: var(--sidebar-left-size-collapse);
-  }
-  .app_aside-left--size.action-overlay {
-    transform: translateX(-100%);
-  }
-  .app_aside-link--size {
-    height: var(--sidebar-link-height);
-  }
-  .app_aside-link--size.active {
-    background-color: #6366f1;
-    color: #fff;
-  }
-  .app_aside-hide.active {
-  
-    opacity: 0;
-  display: none;
-  transition: all 0.3s ease;
-  }
-  .app_aside-hide {
-  opacity: 1;
-  transition: all 0.3s ease;
-  }
-  
-  .app_aside-link--animation:hover{
-    background-color: #c1c1c187;
-  
-  }
-  .app_aside-link--animation.active:hover{
-       background-color: #6366f1;
-      color: #fff;
-  }
+        display: block;
+        width:var(--sidebar-left-size-overlay) !important;
+        padding-bottom: 2.5rem !important;
+        margin-top: 4.5rem !important;
+        padding-right: 0.5rem !important;
+        padding-left: 0.5rem !important;
+}
+#navBar.action-collapse {
+  padding-left:0 !important;
+}
+}
+
+/* Tablet (≥768px và <992px) */
+@media (min-width:786px) and (max-width:1200px) {
+
+}
+
+/* Desktop lớn (≥1400px) */
+@media (min-width:1400px) {
+}
