update dark mode

--- a/src/web/css/style.css
+++ b/src/web/css/style.css
@@ -5,14 +5,14 @@
   --sidebar-left-size-overlay: 0;
   --sidebar-link-height: 2.5rem;
   --body-bg: #f1f5f9;
-  --primary-bg: '#6366f1';
+  --primary-bg: "#6366f1";
 }
 
 /* font  */
-@font-face {
+/* @font-face {
   font-family: "Inter";
-  src: url("./Font/Inter/Inter-Italic-VariableFont_opsz\,wght.ttf") format("truetype");
-  font-weight: 100 900; /* variable từ 100 → 900 */
+  src: url("../../Font/Inter/Inter-Italic-VariableFont_opsz\,wght.ttf") format("truetype");
+  font-weight: 100 900;
   font-style: italic;
 }
 
@@ -22,17 +22,16 @@
   font-weight: 100 900;
   font-style: normal;
 }
-
-
+ */
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: sans-serif;
   transition: background-color 0.3s ease, color 0.3s ease;
   background-color: var(--body-bg);
 }
 
 .app_header {
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
 }
 
 #navBar {
@@ -63,13 +62,11 @@ body {
   left: 15px;
   transform: translateY(-50%);
 }
-.profile
-{
-    cursor: pointer;
+.profile {
+  cursor: pointer;
 }
 .profile span {
   font-size: 0.9rem;
-
 }
 .avatar {
   width: 2.8rem;
@@ -82,33 +79,11 @@ body {
   height: 100%;
   object-fit: cover;
 }
-  
-  .app_header button {
-    width: 3rem;
-    height: 3rem;
-  }
 
-.setting {
-  position: relative;
+.app_header button {
+  width: 3rem;
+  height: 3rem;
 }
-.listSetting {
-  position: absolute;
-  top: 70px;
-  right: 24px;
-  z-index: 10;
-  width: 150px;
-}
-.listSetting::before {
-  content: "";
-  position: absolute;
-  top: -10px;
-  right: 15px;
-  border-width: 0 8px 10px 8px;
-  border-style: solid;
-  border-color: transparent transparent white transparent;
-  filter: drop-shadow(0 -1px 1px rgba(0, 0, 0, 0.1));
-}
-
 .box-multi {
   position: absolute;
   top: 40px; /* khoảng cách xuống dưới */
@@ -154,6 +129,7 @@ body {
 /* Chữ hiển thị bình thường */
 .app_aside-hide {
   /* transform: translate(0); */
+  
   transition: all 0.5s ease; /* Hiệu ứng mượt */
   text-wrap: nowrap;
 }
@@ -165,7 +141,7 @@ body {
   transition: all 0.5s ease; /* Thu chữ lại */
 }
 
-.app_aside-link--animation:hover {
+.app_as ide-link--animation:hover {
   background-color: #c1c1c187;
 }
 
@@ -182,13 +158,13 @@ body {
 /* Khi mở menu thì xoay 90 độ xuống */
 .btn[aria-expanded="true"] .bi-chevron-right {
   transform: rotate(90deg);
-    transition: transform 0.5s ease;
+  transition: transform 0.5s ease;
 }
 .btn[aria-expanded="true"] {
   background-color: #eeeeef;
 }
 .custom-offcanvas {
-  width: 350px !important;  /* hoặc 400px / 60% tùy bạn */
+  width: 350px !important; /* hoặc 400px / 60% tùy bạn */
   border-radius: 12px 0 0 12px;
 }
 .setting-item {
@@ -200,7 +176,7 @@ body {
   border-bottom: none;
 }
 /* Mobile: từ 300px → 767.98px */
-@media (min-width: 300px) and (max-width:786.89px){
+@media (min-width: 300px) and (max-width: 786.89px) {
   /* Sidebar ẩn mặc định */
   .app_aside-left--size {
     transform: translateX(0);
@@ -212,81 +188,75 @@ body {
     padding-left: 0rem !important;
   }
 
-
-  .profile span
-  {
+  .profile span {
     font-size: 12px;
   }
-  .multi-lang
-  {
+  .multi-lang {
+    position: relative;
     font-size: 12px;
   }
   .app_aside-left--size {
-        display: block;
-        width:105%  !important;
-        transform: translateX(-1rem);
-        padding-bottom: 2.5rem !important;
-        margin-top: 4.5rem !important;
-        padding-right: 0.5rem !important;
-        padding-left: 2rem !important;
-}
+    display: block;
+    width: 105% !important;
+    transform: translateX(-1rem);
+    padding-bottom: 2.5rem !important;
+    margin-top: 4.5rem !important;
+    padding-right: 0.5rem !important;
+    padding-left: 2rem !important;
+  }
   .app_aside-left--size.action-collapse {
-        display: block;
-        width:var(--sidebar-left-size-overlay) !important;
-        padding-bottom: 2.5rem !important;
-        margin-top: 4.5rem !important;
-        padding-right: 0.5rem !important;
-        padding-left: 0.5rem !important;
-}
-#navBar.action-collapse {
-  padding-left:0 !important;
-}
-}
-
-@media (min-width: 576px) { 
-
+    display: block;
+    width: var(--sidebar-left-size-overlay) !important;
+    padding-bottom: 2.5rem !important;
+    margin-top: 4.5rem !important;
+    padding-right: 0.5rem !important;
+    padding-left: 0.5rem !important;
+  }
+  #navBar.action-collapse {
+    padding-left: 0 !important;
+  }
 }
 
-@media (min-width: 768px) { 
-    .app_main--size {
-        padding-left: var(--sidebar-left-size);
-        &.collapsed {
-          padding-left: var(--sidebar-left-size-collapse);
-        }
-        transition: all 0.5s ease;
+@media (min-width: 576px) {
+}
+
+@media (min-width: 768px) {
+  .app_main--size {
+    padding-left: var(--sidebar-left-size);
+    &.collapsed {
+      padding-left: var(--sidebar-left-size-collapse);
     }
+    transition: all 0.5s ease;
+  }
 }
 
-@media (min-width: 992px) { 
-
+@media (min-width: 992px) {
 }
 
-@media (min-width: 1200px) { 
-
+@media (min-width: 1200px) {
 }
 
-@media (min-width: 1400px) { 
-
+@media (min-width: 1400px) {
 }
-
-
 
 html[data-bs-theme="dark"] {
   body {
-    background-color: #000000;
+    background-color: #343434;
+  }
+  #appAside {
+    background-color: #000000 !important;
   }
 
   .app_aside-link--animation:hover {
-    background-color: var(--fii-sw-gray-800);
+    background-color: var(--fii-sw-gray-800) !important;
   }
 
   .app_aside-link--animation.active:hover {
-    background-color: #6366f1;
-    color: #fff;
+    background-color: #6366f1 !important;
+    color: #fff !important;
   }
 
   .btn[aria-expanded="true"] {
-    background-color: var(--fii-sw-gray-700);
+    background-color: var(--fii-sw-gray-700) !important;
   }
-} 
-
+}
